--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">Ahmed</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -90,7 +90,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
-                                <span class="skills__name">HTML5</span>
+                                <span class="skills__name">JAVA</span>
                             </div>
                             <div class="skills__bar skills__html">
 
@@ -102,19 +102,19 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-css3 skills__icon'></i>
-                                <span class="skills__name">CSS3</span>
+                                <span class="skills__name">KOTLIN</span>
                             </div>
                             <div class="skills__bar skills__css">
                                 
                             </div>
                             <div>
-                                <span class="skills__percentage">85%</span>
+                                <span class="skills__percentage">95%</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-javascript skills__icon' ></i>
-                                <span class="skills__name">JAVASCRIPT</span>
+                                <span class="skills__name">PYTHON</span>
                             </div>
                             <div class="skills__bar skills__js">
                                 
