--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Ahmed</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <p class="about__text">Experienced Android developer with strong skills in mobile app development using Java and Kotlin. I have a passion for creating innovative and user-friendly solutions, always aiming to deliver an exceptional user experience. Continuously improving my skills to stay updated with the latest Android technologies and to develop high-quality applications.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -86,7 +86,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                        <p class="skills__text">Experienced Android developer with strong skills in mobile app development using Java and Kotlin.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
@@ -101,7 +101,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-css3 skills__icon'></i>
+                                <i class='bx bxl-html5 skills__icon'></i>
                                 <span class="skills__name">KOTLIN</span>
                             </div>
                             <div class="skills__bar skills__css">
@@ -138,7 +138,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                        <img src="assets/img/work3.png" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
@@ -152,19 +152,19 @@
                         <img src="assets/img/work1.png" alt="">
                     </a>
                     <a href="" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="assets/img/work2.png" alt="">
                     </a>
                     <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="assets/img/work3.png" alt="">
                     </a>
                     <a href="" class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="assets/img/work4.png" alt="">
                     </a>
                     <a href="" class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
+                        <img src="assets/img/work5.png" alt="">
                     </a>
                     <a href="" class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="assets/img/work6.png" alt="">
                     </a>
                 </div>
             </section>
@@ -192,7 +192,7 @@
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+            <p class="footer__copy">&#169; VTOL. All rigths reserved</p>
         </footer>
 
 
