--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="www.linkedin.com/in/ahmedadilabogarin" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/ahmedadilabogarin/" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
                     <a href="https://github.com/Ahmed3abogarin" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
