--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Ahmed</a>
+                    <a href="#" class="nav__logo">Ahmed Adil</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -41,12 +41,12 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ahmed</span><br> Android Developer</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="#contact" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/ahmedadilabogarin/" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                    <a href="https://www.behance.net/77d69af9" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
                     <a href="https://github.com/Ahmed3abogarin" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -101,10 +101,10 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-html5 skills__icon'></i>
+                                <i class='bx bxl-kotlin skills__icon'></i>
                                 <span class="skills__name">KOTLIN</span>
                             </div>
-                            <div class="skills__bar skills__css">
+                            <div class="skills__bar skills__html">
                                 
                             </div>
                             <div>
