--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Ahmed Portfolio website</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -172,6 +172,13 @@
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
+
+                <div class="contact__text">
+            <p class="contact__text-description">
+                I'm always open to discussing new opportunities, collaborating on projects, or just connecting.
+                Feel free to reach out to me using the form on the right or directly via email.
+            </p>
+        </div>
 
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
