--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
         <title>Ahmed Portfolio website</title>
     </head>
@@ -181,6 +182,14 @@
         </div>
 
                 <div class="contact__container bd-grid">
+
+
+                    <div class="contact__info">
+        <p><i class="fas fa-phone"></i> +123 456 7890</p>
+        <p><i class="fas fa-envelope"></i> contact@example.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> 123 Main Street, City, Country</p>
+    </div>
+
                     <form action="" class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
