--- a/index.html
+++ b/index.html
@@ -183,11 +183,19 @@
 
                 <div class="contact__container bd-grid">
 
-
-                    <div class="contact__info">
-        <p><i class="fas fa-phone"></i> +123 456 7890</p>
-        <p><i class="fas fa-envelope"></i> contact@example.com</p>
-        <p><i class="fas fa-map-marker-alt"></i> 123 Main Street, City, Country</p>
+                     <div class="contact__info">
+        <div class="contact__item">
+            <i class="fas fa-phone"></i> 
+            <span>+123 456 7890</span>
+        </div>
+        <div class="contact__item">
+            <i class="fas fa-envelope"></i> 
+            <span>contact@example.com</span>
+        </div>
+        <div class="contact__item">
+            <i class="fas fa-map-marker-alt"></i> 
+            <span>123 Main Street, City, Country</span>
+        </div>
     </div>
 
                     <form action="" class="contact__form">
