--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/ahmedadilabogarin/" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.behance.net/77d69af9" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                    <a href="https://www.behance.net/77d69af9" target="_blank" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
                     <a href="https://github.com/Ahmed3abogarin" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -139,7 +139,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.png" alt="" class="skills__img">
+                        <img src="assets/img/work1.png" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
@@ -212,9 +212,9 @@
         <footer class="footer">
             <p class="footer__title">Ahmed</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.facebook.com/akg.akg.589/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/ahmed_toool/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; VTOL. All rigths reserved</p>
         </footer>
