--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
                      <div class="contact__info">
         <div class="contact__item">
             <i class="fas fa-phone"></i> 
-            <span>+123 456 7890</span>
+            <span>+996 53 677 0366</span>
         </div>
         <div class="contact__item">
             <i class="fas fa-envelope"></i> 
-            <span>contact@example.com</span>
+            <span>ahmedadilabogarin@gmail.com</span>
         </div>
         <div class="contact__item">
             <i class="fas fa-map-marker-alt"></i> 
-            <span>123 Main Street, City, Country</span>
+            <span>Prince Saud Al Faisal, Jeddah, Saudi Arabia</span>
         </div>
     </div>
 
