--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
         <title>Ahmed Portfolio website</title>
+        <link rel="icon" type="image/png" href="./assets/img/port.png">
     </head>
     <body>
         <!--===== HEADER =====-->
