--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Experienced Android developer with strong skills in mobile app development using Java and Kotlin.</p>
+                        <p class="skills__text">Skilled Android Developer with expertise in Java, Kotlin, and Jetpack Compose. Proficient in clean code practices, MVVM architecture, and dependency injection using Dagger. Experienced in integrating RESTful APIs with Retrofit and managing SQLite databases. Familiar with Python for backend development, ensuring versatile and efficient solutions. </p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
