--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ahmed</span><br> Android Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Ahmed</span><br> Android Developer</h1>
 
                     <a href="#contact" class="button">Contact</a>
                 </div>
@@ -75,7 +75,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Ahmed</h2>
+                        <h2 class="about__subtitle">I'm Ahmed</h2>
                         <p class="about__text">Experienced Android developer with strong skills in mobile app development using Java and Kotlin. I have a passion for creating innovative and user-friendly solutions, always aiming to deliver an exceptional user experience. Continuously improving my skills to stay updated with the latest Android technologies and to develop high-quality applications.</p>           
                     </div>                                   
                 </div>
