--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Ahmed</span><br> Android Developer</h1>
 
-                    <a href="#contact" class="button">Contact</a>
+                    <a href="assets/img/AHMED.pdf" download="AHMED_CV.pdf" class="button">Download CV</a>
                 </div>
 
                 <div class="home__social">
