--- a/index.html
+++ b/index.html
@@ -199,11 +199,12 @@
         </div>
     </div>
 
-                    <form action="" class="contact__form">
+                    <form action="https://formspree.io/f/mbldykrp" method="POST" class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" placeholder="Email" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Send" class="contact__button button">
+                        <button type="submit" class="contact__button button">Send</button>
+                        <!--===== <input type="button" value="Send" class="contact__button button"> =====-->
                     </form>
                 </div>
             </section>
