--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 
                     <form action="https://formspree.io/f/mbldykrp" method="POST" class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" placeholder="Email" rows="10" class="contact__input"></textarea>
+                        <input type="mail" name="email" placeholder="Email" class="contact__input">
+                        <textarea name="message" id="" cols="0" placeholder="Email" rows="10" class="contact__input"></textarea>
                         <button type="submit" class="contact__button button">Send</button>
                         <!--===== <input type="button" value="Send" class="contact__button button"> =====-->
                     </form>
