--- a/index.html
+++ b/index.html
@@ -199,11 +199,12 @@
         </div>
     </div>
 
-                    <form action="https://formspree.io/f/mbldykrp" method="POST" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" name="email" placeholder="Email" class="contact__input">
-                        <textarea name="message" id="" cols="0" placeholder="Email" rows="10" class="contact__input"></textarea>
-                        <button type="submit" class="contact__button button">Send</button>
+                   <form action="https://formspree.io/f/mbldykrp" method="POST" class="contact__form">
+    <input type="text" name="name" placeholder="Name" class="contact__input" required>
+    <input type="email" name="email" placeholder="Email" class="contact__input" required>
+    <textarea name="message" placeholder="Your Message" rows="10" class="contact__input" required></textarea>
+    <button type="submit" class="contact__button button">Send</button>
+</form>
                         <!--===== <input type="button" value="Send" class="contact__button button"> =====-->
                     </form>
                 </div>
